2008-10-23 arne

	* fix crash in CMenuItem::setTitle and CMenuItem::setKey
	* fix string width calculation with CoreText
	* make mac compile again if the new fileselector is turned off

2008-10-20 arne
	* fix key steeling from host in cocoa code

2008-09-09 yvan

	* fix compilation when LIBPNG is used and win64

2008-09-24 arne

	* removed the CBitmap (void*) constructor
	* added CBitmap (CGImageRef) constructor
	* added CBitmap (GdiPlus::Bitmap*) constructor

2008-07-30 arne

	* calling invalid instead of setDirty when adding or removing a view from a view container
	* added #pragma comment( lib, "Gdiplus" ) when GDIPLUS is enabled

2008-07-29 arne

	* fix bug with setCurrent in COptionMenu and added method getCurrentIndex
	* fix some warnings on Windows

2008-07-16 arne

	* complete cocoa implementation
	* some documentation for the new fileselector class
	
2008-05-15 wolframfranke

	* Fixed compilation errors and warnings when compiling for 10.3.9 on the Mac.

2008-04-29 arne

	* fix mac 64 bit build
	* eleminate most warnings for mac build
	
2008-04-27 arne

	* first part of a new file selector implementation (currently only mac is implemented)
	* timer class on Mac uses 64 bit safe API now
	* using double type instead of float for CCoord if VSTGUI_FLOAT_COORDINATES is defined
	* first part for Cocoa to register objective-c classes on the fly
	* Cocoa is only available if building for Mac OS X 10.5 or later

2008-04-21 wolframfranke

	* Fixed memory leak of 1 menuItem in COptionMenu::removeAllEntry ().
	
2008-03-26 wolframfranke

	* Fixed crash in COptionMenu when it is empty.
	* Added virtual destructors for IMouseObserver, CControlListener and
	  IMultiBitmapControl.
	* Virtualized CParamDisplay::drawText to allow overriding in inherited classes.
	
2007-11-08 arne

	* COptionMenuScheme is deprecated
	* removed CParamDisplay::setTxtFace and getTxtFace
	* CoreText support for building 64 bit variant on Mac OS X.